# goit-pythonweb-hw-06

./: .env  Dockerfile  alembic.ini  cli.py  docker-compose.yml  my_select.py
alembic/: env.py  pyproject.toml
alembic/versions/: 04bdcba74f4e_initial_migration.py
conf/: students_db.py
entity/: models.py
migrations/: seed.py
