[project]
name = "hw-sqlalchemy"
version = "0.1.0"
description = "Alembic, postgresql"
authors = [
    {name = "Iryna",email = "pysarenkoiryna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "faker (>=37.0.1,<38.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py312']
